Added nav boilerplate w/ classes

--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html>
 
 <head>
-    <meta name="viewport"
+    <meta name="viewport" content="width=device-width initial-scale="1">
+    <link href="./resources/css/sstyle.css">
 </head>
     <header>
-        <img class="logo" src="#">
+        <img class="logo" src="resources/images/banner.jpg">
+        <nav class="desktop">
+
         <ul>
-            <li><a = "#">Online</a></li>
+            <li class="link--cta"><a = "#">Online</a></li>
             <li><a = "#">On Campus</a></li>
             <li><a = "#">For companies</a></li>
             <li><a = "#">Sign in</a></li>
         </ul>
+        </nav>
+        <nav class="mobile">
+            <img src="">
+            <img src="">
+            <img src="">
+            <img src="">
+        </nav>
     </header>
 </html>
