--- a/index.html
+++ b/index.html
@@ -1,26 +1,82 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width initial-scale="1">
-    <link href="./resources/css/sstyle.css">
+    
+    <meta https=-equiv="X-UA-Compatible" content="ie-edge"> content=1q
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <title>Colmar Academy</title>
 </head>
     <header>
-        <img class="logo" src="resources/images/banner.jpg">
         <nav class="desktop">
-
-        <ul>
-            <li class="link--cta"><a = "#">Online</a></li>
-            <li><a = "#">On Campus</a></li>
-            <li><a = "#">For companies</a></li>
-            <li><a = "#">Sign in</a></li>
+        <div class ="logo">
+        <img class="logo" src="resources/images/ic-logo.svg">
+        <p>Colmar</p>
+        <span>Academy</span>
+        </div>
+        <ul>    
+            <a href=""><li>On Campus</li></a>
+            <a href=""><li>Online<li></a>
+            <a href=""><li>For Companies</li></a>
+            <a href=""><li>Sign in</li></a>
         </ul>
-        </nav>
-        <nav class="mobile">
-            <img src="">
-            <img src="">
-            <img src="">
-            <img src="">
+        <div class="mobile--nav">
+            <a href="#"
+                ><img src="resources/images/ic-login.svg" alt="Colmar academy logo"/> </a>
+            <a href="#"
+                ><img src="resources/images/ic-on-campus.svg" alt="Campus icon"/></a>
+            <a href="#"
+                ><img src="resources/images/ic-online.svg" alt="Online icon"/></a>
+            <a href="#"
+                ><img src="resources/images/ic-login.svg" alt="Login icon"></a>
+        </div>
         </nav>
     </header>
+<main>
+    <!-- Hero Section-->
+    <section class="hero-container">
+        <div class="hero-left">
+            <img src="resources/images/banner.jpg"
+            alt="Banner image of three people sitting together"
+            />
+            </div>
+            <div class="hero-right">
+                <h1>Learn something new everyday</h1>
+                <h4>Lorem ipsum dolor sit amet, consectetur adipicing elit.</h4>
+                <a href=""><button>Start Here</button></a>
+            </div>
+        </div>
+    </section>
+    <!-- News Section -->
+    <section class="news-container">
+        <article class="news-left">
+            <img src="resources/images/information-main.jpg" alt="A man reading a book" />
+            <div class="news-left-info">
+                <h2>It doesn't hurt to keep practicing</h2>
+                <p>
+                    "Curabitur vitae libero in ipsum portitor consequat. Aliquam et commodo lectus, nec consequat neque.  Sed non accumsanurna.
+                    Paselles sed consequat ex.  Etiam eget magna Laoreet, effictiur dolor consequat, tristique ligula"
+                </p>
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
+            </div>
+        </article>
+        <section class="news-right">
+            <div class="orientation">
+                <div class="orientation-img">
+                    <img
+                        class="orientation-left-desktop"
+                        src="resources/images/information-orientation.jpg"
+                    />
+                    <img
+                        class="orientation-left-mobile"
+                        src="resources/images/information-orientation-mobile.jpg"
+                        alt="Shadows of a few people"
+                    />
+                </div>
+                <div class="orientation info"
+            </div>
+        </section>
+    </section>
+</main>
 </html>
