Post lunch commit

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width initial-scale="1">
-    
-    <meta https=-equiv="X-UA-Compatible" content="ie-edge"> content=1q
+    <meta https=-equiv="X-UA-Compatible" content="ie-edge">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
     <title>Colmar Academy</title>
 </head>
@@ -74,7 +73,11 @@
                         alt="Shadows of a few people"
                     />
                 </div>
-                <div class="orientation info"
+                <div class="orientation info">
+                    <h4>Orientation date</h4>
+                    <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                    <button><a href="">Read more</a></button>
+                </div>
             </div>
         </section>
     </section>
